css/style.css
/*------------------------------------*\
    RESET
\*------------------------------------*/
/* http://meyerweb.com/eric/tools/css/reset/
    v2.0b1 | 201101
    NOTE:WORK IN PROGRESS
    USE WITH CAUTION AND TEST WITH ABANDON */

html,body,div,span,applet,object,iframe,
h1,h2,h3,h4,h5,h6,p,blockquote,pre,
a,abbr,acronym,address,big,cite,code,
del,dfn,em,img,ins,kbd,q,s,samp,
small,strike,strong,sub,sup,tt,var,
b,u,i,center,
dl,dt,dd,ol,ul,li,
fieldset,form,label,legend,
table,caption,tbody,tfoot,thead,tr,th,td,
article,aside,canvas,details,figcaption,figure,
footer,header,hgroup,menu,nav,section,summary,
time,mark,audio,video{
    margin:0;
    padding:0;
    border:0;
    outline:0;
    font-size:100%;
    font:inherit;
    vertical-align:baseline;
}
/* HTML5 display-role reset for older browsers */
article,aside,details,figcaption,figure,
footer,header,hgroup,menu,nav,section{
    display:block;
}
body{
    line-height:1;
}
ol,ul{
    list-style:none;
}
blockquote,q{
    quotes:none;
}
blockquote:before,blockquote:after,
q:before,q:after{
    content:’’;
    content:none;
}
/* remember to define visible focus styles!
:focus{
    outline:?????;
} */

/* remember to highlight inserts somehow! */
ins{
    text-decoration:none;
}
del{
    text-decoration:line-through;
}

table{
    border-collapse:collapse;
    border-spacing:0;
}

/*------------------------------------*\
    MAIN
\*------------------------------------*/

* {
  box-sizing: border-box;
}

h1, h2, h3, h4, h5, h6 {
  display: block;
  font-weight: bold;
  margin: 0.7em;
}

h1 {
  font-size: 2em;
}

h3 {
  font-size: 1.17em;
}

h4 {
  font-size: 0.9em;
}

body {
    text-align: center;
    font-family: Helvetica, Arial, sans-serif;
    margin: 0;
    background: #43C6AC;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #F8FFAE, #43C6AC);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #F8FFAE, #43C6AC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

/* layout and centering */

.flex-fill-center {
    /* take the full size of the window so things get centered in window */
    display: flex;
    width: 100%;
    height: 100vh;
    /* Center children vertically and horizontally*/
    align-items: center;
    justify-content: center;
}

.flex-wrap {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.flex-center {
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Preloader Styling */

#preloader {
    position: relative;
    width: 100%;
    height: 100vh;
    transition: 1s all ease-in-out;
}

#preloader h4 {
    position: relative;
    display: inline-block;
    top: 50vh;
    vertical-align: middle;
    margin: auto;
    /* so it doesn't push everything down more */
    height: 0;
    color: #363333;
    font-weight: 100;
    animation: fading 1s infinite alternate;
}

#preloader .animation {
    position: relative;
    /* quick v center in window */
    top: 50vh;
    margin: auto;
    /* adjust the vertical centering */
    margin-top: -3.1em;
    /* define circular colors and widths */
    border: 0.1em solid #f3f3f3;
    border-radius: 99%;
    border-top: 0.1em solid #df4a4a;
    width: 6em;
    height: 6em;
    animation: spin 2s linear infinite;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

@keyframes fading {
  from {
    opacity: 0;
  }
}

/* Canvas styling */

canvas {
    margin: auto;
    /* Allows fade in and out effects */
    transition: 1s all;
    opacity: 0;
}

/* Popup message styling */

.popup_overlay {
    /* center the content vertically and horizontally */
    display: flex;
    align-items: center;
    justify-content: center;
    /* overlay the win message on top of the game */
    position: absolute;
    /* fill the screen */
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.popup_overlay div {
    max-width: 16em;
    padding: 1.5em;
    opacity: 0;
    text-shadow: 2px 2px #000;
    box-shadow: 0 0 100px #000;
    text-transform: uppercase;
    /* for the transition animation */
    -webkit-transform: translate3d(0, -30%, 0);
    transform: translate3d(0, -30%, 0);
    transition: 0.7s all;
}

.popup_overlay h4 {
  text-transform: capitalize;
  font-weight: 100;
  color: #fff;
}

.win {
    background: #61a2d2;
    color: #f1fcfa;
    font-size: 2em;
    border: 15px dotted #b4f2fa;
}

.game_over {
    border: 10px solid #eb2d2d;
    color: #eb2d2d;
    font-size: 2em;
}

.level {
    border: 5px solid #f5f5f5;
    color: #f5f5f5;
}

.popup_overlay .secondary {
    /* so it overlays the other popup instead of being inline */
    position: absolute;
    text-shadow: none;
    background: #fff;
    background: rgba(255, 255, 255, 0.50);
}

.popup_overlay .on {
    opacity: 1;
    -webkit-transform: none;
    transform: none;
}

/* Onscreen Keyboard for Mobile */

.keyboard {
  width: 100%;
  font-family: sans-serif;
  color: #fff;
}

.toggle_keyboard {
  display: block;
  margin: 0 auto 1em auto;
}

.arrows,
.inputs {
  width: 100%;
  display: none;
  transition: 0.8s all;
}

.arrows .on,
.inputs .on {
  display: flex;
} 

.arrows li {
  font-size: 48px;
  font-weight: bold;
  width: 29%;
  margin: 1% auto;
  border-radius: 999px;
  padding: 0.8em 0.5em;
}
.arrows .up,
.arrows .left,
.arrows .right,
.arrows .down {
  background: #00A388;
}

.inputs li {
  font-size: 2em;
  font-weight: 800;
  color: #213349;
  text-shadow: 0 1px 0 rgba(255, 255, 255, .5);
  width: 27%;
  margin: 5% auto;
  padding: 0.7em 0;
  text-transform: uppercase;
}

.inputs .m,
.inputs .p,
.inputs .enter {
  background: #6998a7;
}

/* Media Queries */

@media only screen
  and (min-device-width: 320px)
  and (max-device-width: 1024px)
  and (orientation: portrait)
  and (-webkit-min-device-pixel-ratio: 1) {
    .arrows,
    .inputs {
      display: flex;
    }
    .popup_overlay {
      bottom: 33%;
    }
}

